--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ mkdocs==1.6.1
 mkdocs-get-deps==0.2.0
 mkdocs-material==9.5.42
 mkdocs-material-extensions==1.3.1
+mkdocs-static-i18n==1.2.3
 packaging==24.1
 paginate==0.5.7
 pathspec==0.12.1
